--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Bharath Gourishetty">
   <link rel="icon" type="image/svg+xml" href="/netflix_favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Netflix - Bharath Gourishetty</title>
+  <title>ReactJs OTT - Bharath Gourishetty</title>
 </head>
 
 <body>
